part 7 error in footer with spacing links and logo fix

--- a/style.css
+++ b/style.css
@@ -328,7 +328,11 @@ input:where([type="text"], [type="email"]) {
     align-items: flex-start;
     gap: var(--size-700);
     justify-content: space-between;
+    display: flex;
+    flex-direction: column;
   }
+
+  
 }
 
 @media(max-width: 50em) {
